full page ready

--- a/html/index.html
+++ b/html/index.html
@@ -137,17 +137,18 @@
   </div>
 </header>
 
-<section id="service" class="area_padding landing_page_area">
+<section id="service" class="area_padding our-services">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-12">
-        <?php if($rand_int){ ?>
         <div class="landing_page">
+        <?php if($rand_int){ ?>
+
 
           <div class="section_title">
             <h2 id="fly-it">Что мы умеем</h2>
             <p>Услуги герокоптеров и их пилотов в Москве и Московской области</p>
-          </div>
+          </div><!-- section_title -->
 
           <ul class="services">
 
@@ -257,16 +258,16 @@
             </li>
 
           </ul>
-          <?php }else{ ?>
-        <div class="landing_page">
+
+
+        <?php }else{ ?>
           <h1>ЗАГЛУУУШКААААА</h1>
-        </div>
         <?php } ?>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+        </div><!-- landing_page -->
+      </div><!-- col-xs-12 col-sm-12 -->
+    </div><!-- row -->
+  </div><!-- container -->
+</section><!-- our-services -->
 
 <section class="special area_padding oneLineTitleArea">
   <div class="container">
