--- a/html/index.html
+++ b/html/index.html
@@ -828,15 +828,10 @@ style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" tit
   </form>
 </div>
 
+<script type="text/javascript" src="js/all-scripts.js"></script>
 
-<script type="text/javascript" src="js/uikit.min.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="js/jquery.nav.js"></script>
-<script type="text/javascript" src="js/jquery.fitvids.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script src="js/jquery.flexslider-min.js"></script>
-<script src="js/jquery.bxslider.min.js"></script>
-<script src="js/isotope.pkgd.min.js"></script>
+
+
 <script src="js/jquery.sequence-min.js"></script>
 <script src="js/sequencejs-options.js"></script>
 <script type="text/javascript" src="js/jquery.retina.js"></script>
